--- a/public/contact.html
+++ b/public/contact.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1>Contact Me</h1>
-    <p>Tel: (+27)81 095 9465</p>
-    <p>Email: aobakwekm@gmail.com</p>
+    <p>Tel: (+27)81 095 9444</p>
+    <p>Email: aobakwe44@gmail.com</p>
     <p>Address:</p>
     <p>
-      Extension 6<br />
+      Extension 44<br />
       Tigane Location<br />
       Hartbessfontein<br />
       2600<br />
